Made a bunch of changes from the CR